Add partials and destroy action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,2 @@
-<%= link_to 'About', about_path %> 
-<br>
-<h1>Welcome to Rails</h1>
-<p>Hello and welcome to rails. This is the very first to a an incredibly exciting new chapter! </p>
-
-<ul>
-  <h1> Dirtybird </h1>
-  <li> Fisher </li>
-  <li> Claude Vonstroke </li>
-  <li> Justin Martin </li>
-  <li> Justin Jay </li>
-  <li> Walker and Royce </li>
-</ul>
-
+<h1> This is the homepage of my blog app </h1>
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', about_path %>
